The above test works on Qt but fails on GTK. It also hangs on Mac but skipped. Most likely it's because of the different implementations of select box on different platforms.
*** Bug 49176 has been marked as a duplicate of this bug. ***
If a solution is not coming shortly, please skip it and unskip with the real patch.
(In reply to comment #2) > If a solution is not coming shortly, please skip it and unskip with the real patch. sure, I will see if I can get it done by end of today.
Created attachment 73259 [details] fix patch This could fix Mac, too. I will update the patch if this is the case.
It looks nice. Could you please unskip the test in GTK+?
Created attachment 73267 [details] fix patch 2
Comment on attachment 73267 [details] fix patch 2 Clearing flags on attachment: 73267 Committed r71605: <http://trac.webkit.org/changeset/71605>
All reviewed patches have been landed. Closing bug.