2010-11-08  Chang Shu  <chang.shu@nokia.com>

Reviewed by Antonio Gomes.

        Unskip test that is passing now.
        https://bugs.webkit.org/show_bug.cgi?id=49150

        * platform/gtk/Skipped:
2010-11-08  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Antonio Gomes.

        [GTK] Use Space to toggle arrow key handling for selection change or
        spatial navigation. Put the logic in common code to pass both Qt and
        GTK. Mac won't work because arrow keys trigger the popup.
        https://bugs.webkit.org/show_bug.cgi?id=49150

        Existing test: fast/events/spatial-navigation/snav-single-select.html

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::menuListDefaultEventHandler):

Canonical link: https://commits.webkit.org/62092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71605 268f45cc-cd09-0410-ab3c-d52691b4dbfc